adding some neumorphic design elements

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,17 +1,17 @@
 <!--Footer-->
-<footer class="page-footer font-small text-muted pt-4">
+<footer class="lowering bg-light page-footer font-small text-muted pt-4 m-4">
   <div class="container-fluid text-center text-md-left">
     <div class="row">
       <div class="col-md-6 mt-md-0 mt-3">
         <h5 class="text-uppercase">Resources</h5>
         <ul class="list-group">
-          <li class="list-group-item border-0">
+          <li class="list-group-item bg-light border-0">
             <a class="text-muted" [routerLink]="['about']">
               <fa-icon [icon]="faQuestionCircle"></fa-icon>
               About
             </a>
           </li>
-          <li class="list-group-item border-0">
+          <li class="list-group-item bg-light border-0">
             <a class="text-muted" [routerLink]="['privacy']">
               <fa-icon [icon]="faShieldAlt"></fa-icon>
               Privacy
@@ -23,7 +23,7 @@
       <div class="col-md-6 mb-md-0 mb-3">
         <h5 class="text-uppercase">Get in touch</h5>
         <ul class="list-group">
-          <li class="list-group-item border-0">
+          <li class="list-group-item bg-light border-0">
             <a class="text-muted" href="mailto:contact@pureokrs.com">
               <fa-icon [icon]="faEnvelope"></fa-icon>
               contact@pureokrs.com
