--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,12 @@
-<nav id="navbar" class="navbar navbar-expand-lg navbar-light navbar-shadow">
+<nav
+  id="navbar"
+  class="navbar navbar-expand-lg navbar-light navbar-shadow bg-light"
+>
   <a class="navbar-brand" [routerLink]="['']"
-    ><img class="logo" src="assets/graph_logo.svg" alt="logo" /> Pure OKRs</a
+    ><span class="logo-container elevated-button mr-2"
+      ><img class="logo-img" src="assets/graph_logo.svg" alt="logo"
+    /></span>
+    Pure OKRs</a
   >
   <button
     class="navbar-toggler"
