--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,9 +2,16 @@
   padding: 0;
 }
 
-.logo {
+.logo-img {
+  height: 100%;
+  width: 100%;
+}
+
+.logo-container {
   height: 3rem;
   width: 3rem;
+  display: inline-block;
+  padding: 0.2rem;
 }
 
 .navbar-shadow {
