--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
 <app-navbar></app-navbar>
-<main class="bd-masthead bg-light" role="main">
+<main class="bg-light" role="main">
   <div class="container-fluid pt-4 px-0">
-    <div class="row m-0">
-      <div class="col p-0">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </main>
 <app-footer></app-footer>
