small styling fixes

--- a/client/src/app/loading/loading.component.html
+++ b/client/src/app/loading/loading.component.html
@@ -1,1 +1,3 @@
-<div id="container"><img id="logo" src="assets/logo_dark.svg" /></div>
+<div class="inset-0 z-50 fixed w-full h-full flex items-center justify-center">
+  <img class="h-20 w-auto" src="assets/logo_dark.svg" />
+</div>
