--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -2,9 +2,11 @@
   id="navbar"
   class="navbar navbar-expand-lg navbar-light navbar-shadow bg-light"
 >
-  <a class="navbar-brand" [routerLink]="['']"
+  <a
+    class="flex items-center font-bold text-sm hover:no-underline"
+    [routerLink]="['']"
     ><span class="logo-container elevated-button mr-2"
-      ><img class="logo-img" src="assets/graph_logo.svg" alt="logo"
+      ><img class="h-full w-full" src="assets/graph_logo.svg" alt="logo"
     /></span>
     Pure OKRs</a
   >
