implementing glassmorphism for new okr modal

--- a/client/src/app/okr-list/okr-node/okr-node.component.html
+++ b/client/src/app/okr-list/okr-node/okr-node.component.html
@@ -1,4 +1,4 @@
-<div class="okr card rounded border-0 p-2 my-1">
+<div class="elevation okr card rounded border-0 p-2 my-1">
   <span class="dropdown">
     <a
       class="btn btn-sm p-0 m-0"
