adding neumorphism to tree view and glassmorphism to edit okr modal

--- a/client/src/app/okr-tree/node/node.component.html
+++ b/client/src/app/okr-tree/node/node.component.html
@@ -16,6 +16,7 @@
       [attr.ry]="2"
     ></svg:rect>
     <svg:foreignObject
+      class="elevation border border-info"
       #text
       [attr.x]="okrTreeNode.x + okrTreeNode.data.offsetX"
       [attr.y]="okrTreeNode.y + okrTreeNode.data.offsetY"
