--- a/client/src/app/okr/edit-okr/edit-okr.component.html
+++ b/client/src/app/okr/edit-okr/edit-okr.component.html
@@ -8,8 +8,8 @@
   #editOkrModal
 >
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
+    <div class="glass modal-content rounded-xl">
+      <div class="modal-header border-0">
         <h5 class="modal-title" id="modalLabel">Edit OKR</h5>
         <button
           type="button"
@@ -22,7 +22,8 @@
       </div>
       <div class="modal-body">
         <input
-          class="form-control input-lg p-1 mb-2"
+          #objectiveInput
+          class="glass form-control form-control-sm p-1 mb-2"
           [(ngModel)]="okrHierarchyNode.data.okr.objective"
           placeholder="Objective"
         />
@@ -30,13 +31,13 @@
           An objective is required to save an OKR
         </p>
         <div
-          class="form-row bg-light rounded p-0 mx-0 my-1"
+          class="form-row glass rounded p-0 mx-0 my-1"
           *ngFor="let kr of okrHierarchyNode.data.okr.keyResults; index as i"
         >
           <div *ngIf="kr" class="form-group col-auto">
             <label class="badge m-0" for="keyResult">Key Result</label>
             <input
-              class="form-control input-sm m-1"
+              class="glass form-control form-control-sm m-1"
               [(ngModel)]="kr.keyResult"
               placeholder="Key Result"
             />
@@ -45,7 +46,7 @@
             <label class="badge m-0" for="progress">Progress [%]</label>
             <input
               type="number"
-              class="form-control input-sm m-1"
+              class="glass form-control form-control-sm m-1"
               [(ngModel)]="kr.progress"
               placeholder="0"
               min="0"
@@ -77,7 +78,7 @@
             }}</span></label
           >
           <input
-            class="form-control input-sm p-1"
+            class="glass form-control form-control-sm m-1"
             #ownerSearchBox
             (keyup)="ownerSearch(ownerSearchBox.value)"
             placeholder="Search for user"
@@ -107,7 +108,7 @@
             }}</span></label
           >
           <input
-            class="form-control input-sm p-1"
+            class="glass form-control form-control-sm m-1"
             #parentSearchBox
             (keyup)="parentSearch(parentSearchBox.value)"
             placeholder="Search for parent OKR"
@@ -131,7 +132,7 @@
           </ul>
         </div>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer border-0">
         <button
           class="btn btn-success mr-1"
           [disabled]="!okrHierarchyNode.data.okr.objective"
