making KR element in modals look OK on mobile

--- a/client/src/app/okr/edit-okr/edit-okr.component.html
+++ b/client/src/app/okr/edit-okr/edit-okr.component.html
@@ -31,10 +31,10 @@
           An objective is required to save an OKR
         </p>
         <div
-          class="form-row glass rounded p-0 mx-0 my-1"
+          class="grid grid-cols-7 gap-1 glass rounded p-0 mx-0 my-1"
           *ngFor="let kr of okrHierarchyNode.data.okr.keyResults; index as i"
         >
-          <div *ngIf="kr" class="form-group col-auto">
+          <div *ngIf="kr" class="form-group col-span-4">
             <label class="badge m-0" for="keyResult">Key Result</label>
             <input
               class="glass form-control form-control-sm text-base m-1"
@@ -42,7 +42,7 @@
               placeholder="Key Result"
             />
           </div>
-          <div *ngIf="kr" class="form-group col-auto p-0 m-0">
+          <div *ngIf="kr" class="form-group col-span-2 p-0 m-0">
             <label class="badge m-0" for="progress">Progress [%]</label>
             <input
               type="number"
@@ -54,10 +54,10 @@
               id="progress"
             />
           </div>
-          <div *ngIf="kr" class="form-group col-auto p-0 pt-4 m-0 ml-2">
+          <div *ngIf="kr" class="form-group p-0 pt-4 m-0 ml-2">
             <label class="sr-only" for="remove">Remove</label>
             <button
-              class="btn btn-sm btn-secondary mt-1 ml-1 mb-0 py-1"
+              class="btn btn-sm mt-1 ml-1 mb-0 py-1"
               title="Delete Key Result"
               (click)="removeKeyResult(i)"
               id="remove"
